# datafox_sl

./: .gitignore  AGENTS.md  CLAUDE.md  GROUPING_PHOTO_FEATURE.md  MANUAL_RECOMMENDATIONS_README.md  PRIORITY_GROUPING_FIX.md  README.md  README_Windows.md  SETUP.md  app.py  check_db_schema.py  config.example.json  main.py  main_app.py  pyproject.toml  requirements.txt  start_datafox_sl.bat  test_enrichment_chain.py  test_final_fix.py  test_manual_recommendations.py  test_table_enrichment.py  wb_recommendations_fix.patch
.serena/: project.yml
docs/: advanced_grouping_readme.md  bigint_migration_fix.md
pages/: 10_Cards_Matcher.py  10_🚧_Склейка_Карточек_OZ.py  11_⚡_Rich_Контент_OZ_v2.py  11_🚧_Rich_Контент_OZ.py  12_⚡_Rich_Контент_OZ_v2.py  12_🔍_Сравнение_Товаров.py  12_🚨_Проблемы_Карточек_OZ.py  13_🔍_Сравнение_Товаров.py  13_🔗_Сбор_WB_SKU_по_Озон.py  14_🎯_Улучшенная_Группировка_Товаров.py  15_📊_Объединение_Excel.py  16_🎯_Рекомендации_WB.py  17_📊_Дробление_Excel.py  1_Home.py  1_🏠_Главная.py  2_Import_Reports.py  2_🖇_Импорт_Отчетов_МП.py  3_Settings.py  3_⚙️_Настройки.py  4_View_Data.py  4_📖_Просмотр_БД.py  5_🔎_Поиск_Между_МП.py  6_Ozon_Order_Stats.py  6_📊_Статистика_Заказов_OZ.py  7_Ozon_RK_manager.py  7_🎯_Менеджер_Рекламы_OZ.py  8_Analytic_Report.py  9_MP_Category_Compare.py  9_🔄_Сверка_Категорий_OZ.py
project-docs/: NAVIGATION.md  PROJECT-INDEX.md  README.md  analysis-report.md  analytic-report-generation.md  cards-matcher-guide.md  changelog.md  db_schema.md  doc-standards.md  documentation-improvement-plan.md  google-sheets-integration.md  migration-status.md  (+7 more)
(+147 files in other folders)
