[project]
name = "datafox-sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "streamlit-extras>=0.7.6",
    "watchdog>=6.0.0",
]
